bug fixed on iphone

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -61,15 +61,45 @@ body.loading #splash {
 	line-height: 55px;
 }
 
+#drawerList iron-icon {
+	margin-right: 33px;
+	opacity: 0.54;
+}
+
+#drawerList > .iron-selected {
+	color: var(--default-primary-color);
+}
+
+#drawerList a {
+text-decoration: none;
+color: var(--menu-link-color);
+display: -ms-flexbox;
+display: -webkit-flex;
+display: flex;
+-ms-flex-direction: row;
+-webkit-flex-direction: row;
+flex-direction: row;
+-ms-flex-align: center;
+-webkit-align-items: center;
+align-items: center;
+font-family: 'Roboto', 'Noto', sans-serif;
+-webkit-font-smoothing: antialiased;
+text-rendering: optimizeLegibility;
+font-size: 14px;
+font-weight: 400;
+line-height: 24px;
+min-height: 48px;
+padding: 0 16px;
+
+	margin-bottom: 10px;	
+	height: 50px;
+}
+
+
 #drawerList .newAlarm{
 	color: rgb(255,0,0);
 	background: rgba(3, 84, 46, 0.1);
 	/*visibility: hidden;*/
-}
-
-#drawerList a {
-	margin-bottom: 10px;	
-	height: 50px;
 }
 
 #drawerList span {
